# libprothandlers

./: CMakeLists.txt  README.md  libprothandlers.sln  stdafx.cpp  stdafx.h
ProtocolPatch/: GlobalMap.h  IInternetProtocolExPatch.h  Protocol.h  ProtocolPatch.cpp  Scheme.h  URLMonPatchBase.h  VTablePatch.h
include/: ProtocolHandlerRegistrar.h  ProtocolPatch.h
libprothandlers/: Buffer.cpp  Buffer.h  ProtocolHandlerRegistrar.cpp  TemporaryProtocolFolderHandler.cpp  TemporaryProtocolFolderHandler.h  TemporaryProtocolFolderHandlerClassFactory.cpp  TemporaryProtocolFolderHandlerClassFactory.h  TemporaryProtocolHandlerClassFactoryT.h  TemporaryProtocolHandlerT.h  TemporaryProtocolResourceHandler.cpp  TemporaryProtocolResourceHandler.h  TemporaryProtocolResourceHandlerClassFactory.cpp  TemporaryProtocolResourceHandlerClassFactory.h  libprothandlers.vcproj  stdafx.cpp  stdafx.h
